tests/ui/parser/generic-statics.stderr
error: static items may not have generic parameters
  --> $DIR/generic-statics.rs:1:9
   |
LL | static S<T>: i32 = 0;
   |         ^^^

error: aborting due to 1 previous error

