tests/ui/parser/generic-statics.rs
static S<T>: i32 = 0;
//~^ ERROR static items may not have generic parameters

fn main() {}
